<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/us_news"
            android:title="@string/us_news_section" />
        <item
            android:id="@+id/music"
            android:title="@string/music_section" />
        <item
            android:id="@+id/business"
            android:title="@string/business_section" />
        <item
            android:id="@+id/technology"
            android:title="@string/technology_section" />
        <item
            android:id="@+id/world"
            android:title="@string/world_news_section" />
        <item
            android:id="@+id/politics"
            android:title="@string/politics_section" />
    </group>
</menu>